--- a/Client/package.json
+++ b/Client/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.1",
     "express": "^4.18.2",
+    "localstorage-polyfill": "^1.0.1",
     "ngx-toastr": "^18.0.0",
     "primeng": "^17.8.0",
     "rxjs": "~7.8.0",
